try to add photo to np array

--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,36 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load image\n",
-    "def load_data(img_res, path_list):\n",
-    "    def imread(path, img_res):\n",
-    "        # 用 PIL讀圖片\n",
-    "        return np.array(Image.open(path).convert('RGB').resize(img_res, Image.ANTIALIAS)) / 255\n",
-    "        \n",
-    "    img_set = np.zeros((len(path_list), ) + img_res)\n",
-    "    # 根據檔案名稱分次讀圖近來\n",
-    "    for idx, rand_img_path in enumerate(path_list):\n",
-    "        img_set[idx] = imread(rand_img_path, img_res[:2])[:,:,:3]\n",
-    "            \n",
-    "    return img_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 根據test DF處理圖片的形狀(完整的path_list, 第一維的size要跟label一致)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,22 +412,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 判斷每個地址有幾張圖"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list index out of range\n",
-      "list index out of range\n"
+      "Wall time: 1.68 s\n"
      ]
     }
    ],
    "source": [
-    "# 判斷每個地址有幾張圖\n",
-    "for m, data in street_df[:5000].loc[street_df[:5000]['section'] == '板橋'].iterrows():\n",
+    "%%time\n",
+    "\n",
+    "for m, data in street_df.head().iterrows():\n",
+    "# for m, data in street_df[:5000].loc[street_df[:5000]['section'] == '板橋'].iterrows():\n",
     "    backup_num = []\n",
     "    try:\n",
     "        address_num = re.findall('\\d+', data['address'])\n",
@@ -482,14 +461,15 @@
     "            address_template = ''.join(address_split)\n",
     "\n",
     "        img_path_list = glob('../0806/land_streetView/*degree/' + address_template + '*.jpg')\n",
-    "        match_list = [] # 記錄有幾張照片符合規則\n",
-    "        price_list = [] # 此地址有多少種售價\n",
+    "        match_list = [] # 記錄有幾種照片符合規則\n",
+    "        price_list = [] # 此地址有多少種售價(有幾筆交易紀錄)\n",
     "        for img in img_path_list:\n",
     "            pattern = re.compile(address_template + '\\d+號')\n",
     "            if pattern.search(img):\n",
     "                match_list.append(img)\n",
-    "                # 紀錄單一地址對應到哪些照片路徑\n",
-    "\n",
+    "                \n",
+    "#         print(len(match_list))\n",
+    "                \n",
     "        for w, data in test.iterrows():\n",
     "            pattern = re.compile(address_template + '\\d+\\~\\d+號')\n",
     "            if pattern.search(data['address']):\n",
@@ -498,8 +478,12 @@
     "        # 處理label, 根據有幾張圖，決定要給幾次一樣的label\n",
     "        # 一個地址有多少種prcie\n",
     "        for k in range(0, len(price_list)):\n",
-    "            # 每種售價根據照片數目填上label\n",
+    "            # 紀錄單一地址對應到哪些照片路徑\n",
+    "            train_pic.append(match_list)\n",
+    "            \n",
+    "            # 每種售價有幾張照片\n",
     "            for index in range(0, len(match_list)):\n",
+    "                # 填上label\n",
     "                label.append(price_list[k])\n",
     "        \n",
     "    except Exception as e:\n",
@@ -507,36 +491,69 @@
     "        continue\n",
     "\n",
     "# list to numpy array\n",
-    "label = np.array(label)"
+    "label = np.array(label)\n",
+    "train_pic = np.array(train_pic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(608281,)"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12078,)\n",
+      "24\n"
+     ]
     }
    ],
    "source": [
-    "label.shape"
+    "# 獨立路段總共被交易次數\n",
+    "print(train_pic.shape)\n",
+    "\n",
+    "# 第一個交易紀錄的照片數\n",
+    "print(len(train_pic[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "608281\n",
+      "(608281,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i, j in enumerate(train_pic):\n",
+    "    sum = sum + len(j)\n",
+    "print(sum)\n",
+    "\n",
+    "# size要一致\n",
+    "print(label.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('label_index5000_all_section', label)"
+    "np.save('label_index5000_板橋_section', label)\n",
+    "np.save('picList_index5000_板橋_section', train_pic)"
    ]
   },
   {
@@ -557,6 +574,67 @@
    ],
    "source": [
     "np.load('label_index5000_all_section.npy').shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load image\n",
+    "def load_data(img_res, path_list, size):\n",
+    "    \n",
+    "    print(img_res)\n",
+    "    print(img_res[:2])\n",
+    "    \n",
+    "    def imread(path, img_res):\n",
+    "        # 用 PIL讀圖片\n",
+    "        return np.array(Image.open(path).convert('RGB').resize(img_res, Image.ANTIALIAS)) / 255\n",
+    "    \n",
+    "    img_set = np.zeros((size, ) + img_res)\n",
+    "    \n",
+    "    print(img_set.shape)\n",
+    "    \n",
+    "    for j, land in enumerate(path_list):\n",
+    "        for idx, rand_img_path in enumerate(land):\n",
+    "#             print(imread(rand_img_path, img_res[:2]).shape)\n",
+    "#             print(imread(rand_img_path, img_res[:2])[:,:,:3].shape)\n",
+    "            img_set[idx + j] = imread(rand_img_path, img_res[:2])[:,:,:3]\n",
+    "            \n",
+    "    return img_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(600, 300, 3)\n",
+      "(600, 300)\n",
+      "(5088, 600, 300, 3)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (300,600,3) into shape (600,300,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-6be2ce47213b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 根據test DF處理圖片的形狀(完整的path_list, 第一維的size要跟label一致)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mimg_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_pic\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-40-2bfd302ea340>\u001b[0m in \u001b[0;36mload_data\u001b[1;34m(img_res, path_list, size)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m#             print(imread(rand_img_path, img_res[:2]).shape)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m#             print(imread(rand_img_path, img_res[:2])[:,:,:3].shape)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m             \u001b[0mimg_set\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrand_img_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg_res\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mimg_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (300,600,3) into shape (600,300,3)"
+     ]
+    }
+   ],
+   "source": [
+    "# 根據test DF處理圖片的形狀(完整的path_list, 第一維的size要跟label一致)\n",
+    "img_data = load_data(img_size, train_pic, label.size)"
    ]
   },
   {
