--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 49.2 s\n"
+      "Wall time: 49.3 s\n"
      ]
     }
    ],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,9 +1012,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras_preprocessing\\image\\dataframe_iterator.py:273: UserWarning: Found 57 invalid image filename(s) in x_col=\"file_path\". These filename(s) will be ignored.\n",
+      "  .format(n_invalid, x_col)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1115,6 +1123,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可視化\n",
+    "> https://keras.io/visualization/\n",
+    "\n",
+    "> https://www.itread01.com/content/1549993358.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -1131,7 +1149,12 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1284,10 +1307,354 @@
     "\n",
     "> https://github.com/leriomaggio/deep-learning-keras-tensorflow/blob/master/8.%20Extra/8.2%20Multi-Modal%20Networks.ipynb\n",
     "\n",
-    "可視化\n",
-    "> https://keras.io/visualization/\n",
+    "python generator and enumerate()\n",
     "\n",
-    "> https://www.itread01.com/content/1549993358.html"
+    "> https://stackoverflow.com/questions/3396279/enumerate-ing-a-generator-in-python\n",
+    "\n",
+    "fit_generator\n",
+    "\n",
+    "> https://blog.csdn.net/learning_tortosie/article/details/85243310"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_partial_df(batch_size=5):\n",
+    "#     for batch_idx in range(0, 10, batch_size):\n",
+    "    for batch_idx in range(0, len(img_df), batch_size):\n",
+    "        print(batch_idx)\n",
+    "        yield img_df.loc[batch_idx:batch_idx + batch_size-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "                                           file_path     label\n",
+      "0  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  15000000\n",
+      "1  ../0806/land_streetView\\120degree\\新北市板橋區華東街251...  15000000\n",
+      "2  ../0806/land_streetView\\120degree\\新北市板橋區華東街261...  15000000\n",
+      "3  ../0806/land_streetView\\120degree\\新北市板橋區華東街270...  15000000\n",
+      "4  ../0806/land_streetView\\120degree\\新北市板橋區華東街271...  15000000\n",
+      "5\n",
+      "                                           file_path     label\n",
+      "5  ../0806/land_streetView\\120degree\\新北市板橋區華東街281...  15000000\n",
+      "6  ../0806/land_streetView\\120degree\\新北市板橋區華東街291...  15000000\n",
+      "7  ../0806/land_streetView\\120degree\\新北市板橋區華東街300...  15000000\n",
+      "8  ../0806/land_streetView\\240degree\\新北市板橋區華東街241...  15000000\n",
+      "9  ../0806/land_streetView\\240degree\\新北市板橋區華東街251...  15000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, df in enumerate(load_partial_df()):\n",
+    "    print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_path</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街241...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街251...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街261...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街270...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街271...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           file_path     label\n",
+       "0  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  15000000\n",
+       "1  ../0806/land_streetView\\120degree\\新北市板橋區華東街251...  15000000\n",
+       "2  ../0806/land_streetView\\120degree\\新北市板橋區華東街261...  15000000\n",
+       "3  ../0806/land_streetView\\120degree\\新北市板橋區華東街270...  15000000\n",
+       "4  ../0806/land_streetView\\120degree\\新北市板橋區華東街271...  15000000"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_generator = load_partial_df()\n",
+    "data_generator.__next__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_path</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街281...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街291...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街300...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街241...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街251...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           file_path     label\n",
+       "5  ../0806/land_streetView\\120degree\\新北市板橋區華東街281...  15000000\n",
+       "6  ../0806/land_streetView\\120degree\\新北市板橋區華東街291...  15000000\n",
+       "7  ../0806/land_streetView\\120degree\\新北市板橋區華東街300...  15000000\n",
+       "8  ../0806/land_streetView\\240degree\\新北市板橋區華東街241...  15000000\n",
+       "9  ../0806/land_streetView\\240degree\\新北市板橋區華東街251...  15000000"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_generator.__next__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_path</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街261...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街270...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街271...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街281...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街291...</td>\n",
+       "      <td>15000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            file_path     label\n",
+       "10  ../0806/land_streetView\\240degree\\新北市板橋區華東街261...  15000000\n",
+       "11  ../0806/land_streetView\\240degree\\新北市板橋區華東街270...  15000000\n",
+       "12  ../0806/land_streetView\\240degree\\新北市板橋區華東街271...  15000000\n",
+       "13  ../0806/land_streetView\\240degree\\新北市板橋區華東街281...  15000000\n",
+       "14  ../0806/land_streetView\\240degree\\新北市板橋區華東街291...  15000000"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(data_generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "合成一個不支持shuffle的generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "train_datagen = ImageDataGenerator()\n",
+    "\n",
+    "def load_multi_data():\n",
+    "    genX1 = train_datagen.flow_from_dataframe(     \n",
+    "            dataframe=img_df,\n",
+    "            batch_size= 20,\n",
+    "            x_col=\"file_path\", \n",
+    "            y_col=\"label\",\n",
+    "            target_size = (img_rows, img_cols),\n",
+    "            shuffle=False, \n",
+    "            class_mode=\"other\")\n",
+    "    \n",
+    "    data_generator = load_partial_df()\n",
+    "    \n",
+    "    while True:\n",
+    "            X1i = genX1.next()\n",
+    "            X2i = next(data_generator)\n",
+    "            yield [X1i[0], X2i], X1i[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "自己寫一個shuffle的generator"
    ]
   },
   {
@@ -1297,11 +1664,11 @@
    "outputs": [],
    "source": [
     "# Define two input layers\n",
-    "image_input = Input(img_size_np)\n",
-    "vector_input = Input((6,))\n",
+    "image_input = Input(img_size)\n",
+    "vector_input = Input((1,))\n",
     "\n",
     "# Convolution + Flatten for the image\n",
-    "conv_layer = Conv2D(32, (3,3))(image_input)\n",
+    "conv_layer = Conv2D(32, (5,5))(image_input)\n",
     "flat_layer = Flatten()(conv_layer)\n",
     "\n",
     "# Concatenate the convolutional features and the vector input\n",
@@ -1317,7 +1684,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
+    "model_history = model.fit_generator(load_multi_data(), epochs=3, steps_per_epoch=img_df.shape[0]/ 20, verbose=2)"
+   ]
   }
  ],
  "metadata": {
