--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     }
    },
    "outputs": [
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -259,6 +260,7 @@
        "      <th>address</th>\n",
        "      <th>price</th>\n",
        "      <th>area</th>\n",
+       "      <th>imgs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -267,45 +269,57 @@
        "      <td>新北市板橋區華東街271~300號</td>\n",
        "      <td>15000000</td>\n",
        "      <td>95.26</td>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>新北市板橋區華東街271~300號</td>\n",
        "      <td>32680000</td>\n",
        "      <td>212.13</td>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>新北市板橋區華東街271~300號</td>\n",
        "      <td>22770000</td>\n",
        "      <td>152.97</td>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>新北市板橋區華東街271~300號</td>\n",
        "      <td>17100000</td>\n",
        "      <td>122.89</td>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>新北市板橋區華東街271~300號</td>\n",
        "      <td>15420000</td>\n",
        "      <td>97.63</td>\n",
+       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街241...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             address     price    area\n",
-       "0  新北市板橋區華東街271~300號  15000000   95.26\n",
-       "1  新北市板橋區華東街271~300號  32680000  212.13\n",
-       "2  新北市板橋區華東街271~300號  22770000  152.97\n",
-       "3  新北市板橋區華東街271~300號  17100000  122.89\n",
-       "4  新北市板橋區華東街271~300號  15420000   97.63"
+       "             address     price    area  \\\n",
+       "0  新北市板橋區華東街271~300號  15000000   95.26   \n",
+       "1  新北市板橋區華東街271~300號  32680000  212.13   \n",
+       "2  新北市板橋區華東街271~300號  22770000  152.97   \n",
+       "3  新北市板橋區華東街271~300號  17100000  122.89   \n",
+       "4  新北市板橋區華東街271~300號  15420000   97.63   \n",
+       "\n",
+       "                                                imgs  \n",
+       "0  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  \n",
+       "1  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  \n",
+       "2  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  \n",
+       "3  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  \n",
+       "4  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 49.3 s\n"
+      "Wall time: 55.1 s\n"
      ]
     }
    ],
@@ -436,6 +450,7 @@
     "%%time\n",
     "\n",
     "# 從 streetDF找出 unique地址有幾張照片符合，並記錄到 testDF\n",
+    "# for m, data in street_df[:1000].loc[street_df[:1000]['section'] == '板橋'].iterrows():\n",
     "for m, data in street_df[:5000].loc[street_df[:5000]['section'] == '板橋'].iterrows():\n",
     "    backup_num = []\n",
     "    try:\n",
@@ -468,7 +483,9 @@
     "            pattern = re.compile(address_template + '\\d+號')\n",
     "            if pattern.search(img):\n",
     "                match_list.append(img)\n",
-    "        test.loc[test['address'] == data['address'], 'imgs'] = ','.join(match_list)\n",
+    "                \n",
+    "        if not len(match_list) == 0:\n",
+    "            test.loc[test['address'] == data['address'], 'imgs'] = ','.join(match_list)\n",
     "                \n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -568,7 +585,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,13 +604,20 @@
     "for i, data in test.iterrows():\n",
     "    train_pic.extend(data['imgs'].split(','))\n",
     "    # 根據 testDF同地址的不同價格數目與 unique地址的圖片產生label\n",
-    "    label.extend([data['price']]*len(data['imgs'].split(',')))"
+    "    label.extend([data['price']]*len(data['imgs'].split(',')))\n",
+    "    area.extend([data['area']]*len(data['imgs'].split(',')))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -733,7 +766,13 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -792,7 +831,13 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -863,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,14 +1376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "0\n",
+      "../0806/land_streetView\\120degree\\新北市板橋區華東街241號_120.jpg\n",
       "                                           file_path     label\n",
       "0  ../0806/land_streetView\\120degree\\新北市板橋區華東街241...  15000000\n",
       "1  ../0806/land_streetView\\120degree\\新北市板橋區華東街251...  15000000\n",
@@ -1346,6 +1398,7 @@
       "3  ../0806/land_streetView\\120degree\\新北市板橋區華東街270...  15000000\n",
       "4  ../0806/land_streetView\\120degree\\新北市板橋區華東街271...  15000000\n",
       "5\n",
+      "../0806/land_streetView\\120degree\\新北市板橋區華東街281號_120.jpg\n",
       "                                           file_path     label\n",
       "5  ../0806/land_streetView\\120degree\\新北市板橋區華東街281...  15000000\n",
       "6  ../0806/land_streetView\\120degree\\新北市板橋區華東街291...  15000000\n",
@@ -1356,14 +1409,21 @@
     }
    ],
    "source": [
+    "# 分批load data並自動跑完全部\n",
     "for i, df in enumerate(load_partial_df()):\n",
+    "    print(df.values[0][0])\n",
     "    print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1449,7 +1509,12 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1534,7 +1599,12 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1625,29 +1695,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_df2 = pd.DataFrame()\n",
+    "img_df2['file_path'] = train_pic\n",
+    "img_df2['label'] = label\n",
+    "img_df2['area'] = area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "train_datagen = ImageDataGenerator()\n",
     "\n",
-    "def load_multi_data():\n",
+    "def load_partial_df(batch_size=40):\n",
+    "    for batch_idx in range(0, len(img_df2), batch_size):\n",
+    "        if batch_idx + batch_size >= len(img_df2):\n",
+    "            yield img_df2.loc[batch_idx:len(img_df2)-1]\n",
+    "        else:\n",
+    "            yield img_df2.loc[batch_idx:batch_idx + batch_size-1]\n",
+    "\n",
+    "def load_multi_data(batch_size=40):\n",
     "    genX1 = train_datagen.flow_from_dataframe(     \n",
-    "            dataframe=img_df,\n",
-    "            batch_size= 20,\n",
+    "            dataframe=img_df2,\n",
+    "            batch_size= batch_size,\n",
     "            x_col=\"file_path\", \n",
     "            y_col=\"label\",\n",
     "            target_size = (img_rows, img_cols),\n",
     "            shuffle=False, \n",
     "            class_mode=\"other\")\n",
     "    \n",
-    "    data_generator = load_partial_df()\n",
+    "    data_generator = load_partial_df(batch_size)\n",
     "    \n",
     "    while True:\n",
     "            X1i = genX1.next()\n",
     "            X2i = next(data_generator)\n",
-    "            yield [X1i[0], X2i], X1i[1]"
+    "            yield [X1i[0], X2i['area']], X1i[1]"
    ]
   },
   {
@@ -1662,6 +1751,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0812 14:25:47.753598 18336 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W0812 14:25:47.786597 18336 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0812 14:25:47.793598 18336 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            (None, 600, 300, 3)  0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_1 (Conv2D)               (None, 596, 296, 32) 2432        input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)            (None, 1)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_1 (Flatten)             (None, 5645312)      0           conv2d_1[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 5645313)      0           input_2[0][0]                    \n",
+      "                                                                 flatten_1[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_1 (Dense)                 (None, 1)            5645314     concatenate_1[0][0]              \n",
+      "==================================================================================================\n",
+      "Total params: 5,647,746\n",
+      "Trainable params: 5,647,746\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Define two input layers\n",
     "image_input = Input(img_size)\n",
@@ -1676,7 +1812,174 @@
     "output = Dense(1, activation='relu')(concat_layer)\n",
     "\n",
     "# define a model with a list of two inputs\n",
-    "model = Model(inputs=[image_input, vector_input], outputs=output)"
+    "model = Model(inputs=[image_input, vector_input], outputs=output)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94247\n",
+      "94248\n",
+      "94249\n",
+      "94442\n",
+      "94443\n",
+      "94444\n",
+      "94445\n",
+      "94446\n",
+      "94447\n",
+      "94448\n",
+      "94449\n",
+      "94450\n",
+      "94451\n",
+      "94452\n",
+      "94453\n",
+      "94454\n",
+      "94455\n",
+      "94456\n",
+      "94457\n",
+      "94458\n",
+      "94483\n",
+      "94484\n",
+      "94485\n",
+      "94906\n",
+      "95027\n",
+      "95028\n",
+      "95029\n",
+      "95030\n",
+      "95031\n",
+      "95032\n",
+      "95033\n",
+      "95034\n",
+      "95035\n",
+      "95036\n",
+      "95037\n",
+      "95038\n",
+      "95039\n",
+      "95040\n",
+      "95041\n",
+      "99626\n",
+      "99627\n",
+      "99628\n",
+      "99629\n",
+      "99630\n",
+      "99644\n",
+      "99645\n",
+      "99646\n",
+      "99647\n",
+      "99648\n",
+      "99649\n",
+      "99650\n",
+      "99651\n",
+      "99652\n",
+      "99653\n",
+      "99654\n",
+      "99655\n",
+      "100011\n",
+      "---------\n",
+      "57\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "error_sum = 0\n",
+    "# 找出那些file可能讀不到\n",
+    "for i, data in enumerate(train_pic):\n",
+    "    if not os.path.isfile(data):\n",
+    "        # 有些地址沒有圖\n",
+    "        print(i)\n",
+    "        error_sum = error_sum +1\n",
+    "print('---------')\n",
+    "print(error_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_pic[99655]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 移除 file_path實質上沒東西的\n",
+    "img_df2.drop(img_df2.loc[img_df2['file_path'] == ''].index, inplace=True)\n",
+    "img_df2.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([], dtype='int64')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_df2.loc[img_df2['file_path'] == ''].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "Found 144316 validated image filenames.\n",
+      "3608/3607 [==============================] - 389s 108ms/step - loss: 100.0000\n",
+      "Wall time: 6min 29s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "model.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
+    "model_history = model.fit_generator(load_multi_data(), epochs=1, steps_per_epoch=img_df2.shape[0]/ 40, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. price normailize\n",
+    "2. 找tripAdviosr使用者關聯\n",
+    "3. 做CNN regression的testing"
    ]
   },
   {
@@ -1684,10 +1987,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
-    "model_history = model.fit_generator(load_multi_data(), epochs=3, steps_per_epoch=img_df.shape[0]/ 20, verbose=2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
