avoid no imgs address added to the training data

--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -62,7 +62,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -140,7 +145,7 @@
     }
    ],
    "source": [
-    "street_df[:5000].head()"
+    "street_df.head()"
    ]
   },
   {
@@ -149,8 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 找哪個區目前有的照片最多 (street_df 前5000筆)\n",
-    "for index, row in street_df[:5000].iterrows():\n",
+    "# 找哪個區目前有的照片最多\n",
+    "for index, row in street_df.iterrows():\n",
     "    # 切割市 & 區\n",
     "    pattern = re.split('市', re.split('區', row['address'])[0])[1]\n",
     "    street_df.loc[index, 'section'] = pattern"
@@ -220,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +239,12 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -330,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 55.1 s\n"
+      "Wall time: 54.6 s\n"
      ]
     }
    ],
@@ -486,6 +496,8 @@
     "                \n",
     "        if not len(match_list) == 0:\n",
     "            test.loc[test['address'] == data['address'], 'imgs'] = ','.join(match_list)\n",
+    "        else:\n",
+    "            test.loc[test['address'] == data['address'], 'imgs'] = ''\n",
     "                \n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -495,7 +507,12 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -585,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,10 +619,11 @@
     "address_count = test['address'].value_counts().to_frame().rename(columns={\"address\": \"count\"}).rename_axis('address').reset_index()\n",
     "# 根據單一地址被交易次數與照片數，建立 train_pic list\n",
     "for i, data in test.iterrows():\n",
-    "    train_pic.extend(data['imgs'].split(','))\n",
-    "    # 根據 testDF同地址的不同價格數目與 unique地址的圖片產生label\n",
-    "    label.extend([data['price']]*len(data['imgs'].split(',')))\n",
-    "    area.extend([data['area']]*len(data['imgs'].split(',')))"
+    "    if not data['imgs']=='':\n",
+    "        train_pic.extend(data['imgs'].split(','))\n",
+    "        # 根據 testDF同地址的不同價格數目與 unique地址的圖片產生label\n",
+    "        label.extend([data['price']]*len(data['imgs'].split(',')))\n",
+    "        area.extend([data['area']]*len(data['imgs'].split(',')))"
    ]
   },
   {
@@ -1507,186 +1525,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file_path</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街281...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街291...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>../0806/land_streetView\\120degree\\新北市板橋區華東街300...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街241...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街251...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           file_path     label\n",
-       "5  ../0806/land_streetView\\120degree\\新北市板橋區華東街281...  15000000\n",
-       "6  ../0806/land_streetView\\120degree\\新北市板橋區華東街291...  15000000\n",
-       "7  ../0806/land_streetView\\120degree\\新北市板橋區華東街300...  15000000\n",
-       "8  ../0806/land_streetView\\240degree\\新北市板橋區華東街241...  15000000\n",
-       "9  ../0806/land_streetView\\240degree\\新北市板橋區華東街251...  15000000"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_generator.__next__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file_path</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街261...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街270...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街271...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街281...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>../0806/land_streetView\\240degree\\新北市板橋區華東街291...</td>\n",
-       "      <td>15000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            file_path     label\n",
-       "10  ../0806/land_streetView\\240degree\\新北市板橋區華東街261...  15000000\n",
-       "11  ../0806/land_streetView\\240degree\\新北市板橋區華東街270...  15000000\n",
-       "12  ../0806/land_streetView\\240degree\\新北市板橋區華東街271...  15000000\n",
-       "13  ../0806/land_streetView\\240degree\\新北市板橋區華東街281...  15000000\n",
-       "14  ../0806/land_streetView\\240degree\\新北市板橋區華東街291...  15000000"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "next(data_generator)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1695,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,142 +1656,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "94247\n",
-      "94248\n",
-      "94249\n",
-      "94442\n",
-      "94443\n",
-      "94444\n",
-      "94445\n",
-      "94446\n",
-      "94447\n",
-      "94448\n",
-      "94449\n",
-      "94450\n",
-      "94451\n",
-      "94452\n",
-      "94453\n",
-      "94454\n",
-      "94455\n",
-      "94456\n",
-      "94457\n",
-      "94458\n",
-      "94483\n",
-      "94484\n",
-      "94485\n",
-      "94906\n",
-      "95027\n",
-      "95028\n",
-      "95029\n",
-      "95030\n",
-      "95031\n",
-      "95032\n",
-      "95033\n",
-      "95034\n",
-      "95035\n",
-      "95036\n",
-      "95037\n",
-      "95038\n",
-      "95039\n",
-      "95040\n",
-      "95041\n",
-      "99626\n",
-      "99627\n",
-      "99628\n",
-      "99629\n",
-      "99630\n",
-      "99644\n",
-      "99645\n",
-      "99646\n",
-      "99647\n",
-      "99648\n",
-      "99649\n",
-      "99650\n",
-      "99651\n",
-      "99652\n",
-      "99653\n",
-      "99654\n",
-      "99655\n",
-      "100011\n",
-      "---------\n",
-      "57\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "error_sum = 0\n",
-    "# 找出那些file可能讀不到\n",
-    "for i, data in enumerate(train_pic):\n",
-    "    if not os.path.isfile(data):\n",
-    "        # 有些地址沒有圖\n",
-    "        print(i)\n",
-    "        error_sum = error_sum +1\n",
-    "print('---------')\n",
-    "print(error_sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "''"
+       "1.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_pic[99655]"
+    "from sklearn import preprocessing\n",
+    "\n",
+    "x = img_df2['label'].values \n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "# https://stackoverflow.com/questions/25886116/sklearns-minmaxscaler-only-returns-zeros\n",
+    "x_scaled = min_max_scaler.fit_transform(x.reshape(-1, 1))\n",
+    "img_df2['label'] = x_scaled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 移除 file_path實質上沒東西的\n",
-    "img_df2.drop(img_df2.loc[img_df2['file_path'] == ''].index, inplace=True)\n",
-    "img_df2.reset_index(inplace=True, drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([], dtype='int64')"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img_df2.loc[img_df2['file_path'] == ''].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1962,8 +1691,8 @@
      "text": [
       "Epoch 1/1\n",
       "Found 144316 validated image filenames.\n",
-      "3608/3607 [==============================] - 389s 108ms/step - loss: 100.0000\n",
-      "Wall time: 6min 29s\n"
+      "3608/3607 [==============================] - 380s 105ms/step - loss: 99.9917\n",
+      "Wall time: 6min 20s\n"
      ]
     }
    ],
@@ -1977,9 +1706,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 修正方向\n",
     "1. price normailize\n",
     "2. 找tripAdviosr使用者關聯\n",
     "3. 做CNN regression的testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "製作test data"
    ]
   },
   {
@@ -1987,7 +1724,130 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test2 = pd.DataFrame(columns=['address', 'price', 'area'])\n",
+    "# 找出地址符合street前5000的，並幫street標上售價\n",
+    "for i, item in street_df[5001:5500].loc[street_df[5001:5500]['section'] == '板橋'].iterrows():\n",
+    "    for j, price in land_df.loc[land_df['土地區段位置/建物區段門牌'] == item['address']].iterrows():\n",
+    "        test2.loc[len(test2), ['address', 'price', 'area']] = item['address'], price['總價元'], price['建物移轉總面積平方公尺']\n",
+    "        \n",
+    "for m, data in street_df[5001:5500].loc[street_df[5001:5500]['section'] == '板橋'].iterrows():\n",
+    "    backup_num = []\n",
+    "    try:\n",
+    "        address_num = re.findall('\\d+', data['address'])\n",
+    "        if(len(re.findall('\\d+', data['address'])) > 2):\n",
+    "            # 存大於2個的數值(有巷/弄)\n",
+    "            backup_num = address_num\n",
+    "            # 取倒數兩個\n",
+    "            address_num = address_num[-2:]\n",
+    "\n",
+    "        size = math.ceil((int(address_num[1]) - int(address_num[0]))/10)\n",
+    "        address_split = re.split('\\d+', data['address'])\n",
+    "        address_split.remove('~')\n",
+    "        address_split.remove('號')\n",
+    "        address_template = ''.join(address_split)\n",
+    "        if(len(backup_num) == 3):\n",
+    "            #有巷\n",
+    "            address_split[0] = address_split[0] + backup_num[0]\n",
+    "            address_template = ''.join(address_split)\n",
+    "        if(len(backup_num) == 4):\n",
+    "            # 有巷也有弄\n",
+    "            address_split[0] = address_split[0] + backup_num[0]\n",
+    "            address_split[1] = address_split[1] + backup_num[1]\n",
+    "            address_template = ''.join(address_split)\n",
+    "\n",
+    "        img_path_list = glob('../0806/land_streetView/*degree/' + address_template + '*.jpg')\n",
+    "        match_list = [] # 記錄有幾種照片符合規則\n",
+    "        price_list = [] # 此地址有多少種售價(有幾筆交易紀錄)\n",
+    "        for img in img_path_list:\n",
+    "            pattern = re.compile(address_template + '\\d+號')\n",
+    "            if pattern.search(img):\n",
+    "                match_list.append(img)\n",
+    "                \n",
+    "        if not len(match_list) == 0:\n",
+    "            test2.loc[test2['address'] == data['address'], 'imgs'] = ','.join(match_list)\n",
+    "                \n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        continue\n",
+    "        \n",
+    "area2 = []\n",
+    "train_pic2 = []\n",
+    "label2 = []\n",
+    "# 根據單一地址被交易次數與照片數，建立 train_pic list\n",
+    "for i, data in test2.iterrows():\n",
+    "    train_pic.extend(data['imgs'].split(','))\n",
+    "    # 根據 testDF同地址的不同價格數目與 unique地址的圖片產生label\n",
+    "    label2.extend([data['price']]*len(data['imgs'].split(',')))\n",
+    "    area2.extend([data['area']]*len(data['imgs'].split(',')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.DataFrame()\n",
+    "test_df['file_path'] = train_pic2\n",
+    "test_df['label'] = label2\n",
+    "test_df['area'] = area2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "分批讀取test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_multi_test_data(batch_size=40):\n",
+    "    for batch_idx in range(0, len(img_df2), batch_size):\n",
+    "        if batch_idx + batch_size >= len(img_df2):\n",
+    "            yield img_df2.loc[batch_idx:len(img_df2)-1]\n",
+    "        else:\n",
+    "            yield img_df2.loc[batch_idx:batch_idx + batch_size-1]\n",
+    "\n",
+    "def load_multi_test_data(batch_size=40):\n",
+    "    genX1 = train_datagen.flow_from_dataframe(     \n",
+    "            dataframe=test_df,\n",
+    "            batch_size= batch_size,\n",
+    "            x_col=\"file_path\", \n",
+    "            y_col=\"label\",\n",
+    "            target_size = (img_rows, img_cols),\n",
+    "            shuffle=False, \n",
+    "            class_mode=\"other\")\n",
+    "    \n",
+    "    data_generator = load_multi_test_data(batch_size)\n",
+    "    \n",
+    "    while True:\n",
+    "            X1i = genX1.next()\n",
+    "            X2i = next(data_generator)\n",
+    "            yield X1i[0], X1i[1]\n",
+    "#             yield [X1i[0], X2i['area']], X1i[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "evaluate model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_CNN.evaluate_generator(load_multi_test_data(), steps=atest_df.shape[0]/40)"
+   ]
   }
  ],
  "metadata": {
